--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
             }
         }
     </style>
+    <meta name="google-site-verification" content="FsrwK5QAyYoe9aoJsdbIi_O2IilN8x2HKur5OFMvwaI" />
 </head>
 <body>
     <div class="container">
